# libzmq-static

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install_libzmq.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml
